<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <group
        android:id="@+id/group_mode_select">
        <item
            android:id="@+id/action_uncheck"
            android:orderInCategory="1"
            android:title="@string/action_uncheck"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_copy"
            android:orderInCategory="2"
            android:title="@string/action_copy"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_moveto"
            android:orderInCategory="3"
            android:title="@string/action_moveto"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_delete"
            android:orderInCategory="4"
            android:title="@string/action_delete"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_properties"
            android:orderInCategory="5"
            android:title="@string/action_properties"
            app:showAsAction="never"/>
    </group>

    <group
        android:id="@+id/group_mode_normal">

        <item
            android:id="@+id/action_settings"
            android:orderInCategory="1"
            android:title="@string/action_settings"
            app:showAsAction="never"/>

        <item
            android:id="@+id/action_about"
            android:orderInCategory="2"
            android:title="@string/action_about"
            app:showAsAction="never"/>
    </group>



</menu>